software/configuration/istio-ingress/gateway.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: external-gateway
#   namespace: istio-system
# spec:
#   selector:
#     istio: ingressgateway-external
#   servers:
#   - port:
#       number: 80
#       name: http
#       protocol: HTTP
#     hosts:
#     - "*"
  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS
  #   hosts:
  #   - "*"
  #   tls:
  #     mode: SIMPLE
  #     credentialName: istio-ingress-cert
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: internal-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS
  #   hosts:
  #   - "*"
  #   tls:
  #     mode: SIMPLE
  #     credentialName: istio-ingress-cert
